--- a/app/views/quizes/index.html.erb
+++ b/app/views/quizes/index.html.erb
@@ -1,2 +1,103 @@
-<h1>Quizes#index</h1>
-<p>Find me in app/views/quizes/index.html.erb</p>
+<%# ユーザーアカウントのメニューを表示%>
+<div class='navigation'>
+    <ul class='account-menu'>
+      <% if user_signed_in? %>
+        <div>
+          <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+        </div>
+      <% else %>
+        <div>
+          <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+          <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+        </div>
+      <% end %>
+    </ul>
+</div>
+<%# ユーザーアカウントのメニューを表示%>
+
+<%# 作成する予定のコンテンツ %>
+<br>
+
+<h1>（仮置）アプリタイトル</h1>
+
+<br>
+
+<h2>（仮置）バナーの画像（ナビゲーションバー？）を挿入する</h2>
+
+<br>
+
+<h2>（仮置）解きたいクイズを選びましょう！</h2>
+
+<br>
+<%# 作成する予定のコンテンツ %>
+
+<h2>クイズ一覧(ここから)</h2>
+
+<div class='quiz-contents'>
+  <%= link_to 'クイズを新規投稿する', 'hoge', class: '' %>
+    
+    <%# <ul class='quiz-lists'> %>
+      <%# クイズのインスタンス変数を展開して表示する %>
+      <%# <% @quizes.each do |quiz| %> %>
+        <%# <li class='quiz-list'> %>
+          <%# <%= link_to quiz_path(quiz) do %> %>
+            <%# 画像・タイトル・お気に入り数の表示 %>
+            
+            <%# クイズのイメージ画像がない場合は、適当な画像を表示する %>
+            <%# <div class='quiz-img-content'> %>
+              <%# <%= image_tag quiz.image, class: "quiz-img" %> %>
+            <%# </div> %>
+            <%#// クイズのイメージ画像がない場合は、適当な画像を表示する %>
+
+            <%# <div class='quiz-info'> %>
+              <%# <h3 class='quiz-title'> %>
+                <%# <%= quiz.title %> %>
+              <%# </h3> %>
+
+              <%# お気に入り数の表示 %>
+              <%# <div class='star-btn'> %>
+                <%# <%= image_tag "star.png", class:"star-icon" %> %>
+                <%# <span class='star-count'>0</span> %>
+              <%# </div> %>
+              <%# お気に入り数の表示 %>
+
+            <%# </div> %>
+
+            <%# 画像・タイトル・お気に入り数の表示 %>
+          <%# <% end %> %>
+        <%# </li> %>
+      <%# <% end %> %>
+      <%# //クイズのインスタンス変数を展開して表示する %>
+
+      <%# クイズがない場合のダミー %>
+      <%# クイズが存在する場合は表示しない %>
+      <%# <% if @quizs == nil %> %>
+        <%# <li class='list'> %>
+          <%# <%= link_to '#' do %> %>
+          <%# <%= image_tag "https://", class: "quiz-img" %> %>
+          <%# <div class='quiz-info'> %>
+            <%# <h3 class='quiz-title'> %>
+              <%# クイズを出題してみましょう！ %>
+            <%# </h3> %>
+              <%# <div class='star-btn'> %>
+                <%# <%= image_tag "star.png", class:"star-icon" %> %>
+                <%# <span class='star-count'>0</span> %>
+              <%# </div> %>
+          <%# </div> %>
+          <%# <% end %> %>
+        <%# </li> %>
+        <%# <% end %> %>
+      <%# //クイズがある場合は表示されないようにしましょう %>
+      <%# //クイズが存在する場合は表示しない %>
+
+      <%# お試しクイズ %>
+      <%# 未ログインユーザーにのみ表示する %>
+      <%# お試しクイズ %>
+
+    <%# </ul> %>
+<%# </div> %>
+
+<h2>クイズ一覧(ここまで)</h2>
+
+
